# WikiGen

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_wikigen.py
wikigen/: __init__.py  agent_instructions.py  cache.py  cli.py  collector.py  config.py  ingester.py  linter.py  updater.py  writer.py
wikigen/backends/: __init__.py
wikigen/prompts/: __init__.py
wikigen_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
